# scratchpad

./: .gitignore  README.md
apps/FormatMessage/: CMakeLists.txt
apps/FormatMessage/FormatMessage/: CMakeLists.txt  FormatMessage.cpp  FormatMessage.h
apps/WindowsLargePagesTest/: CMakeLists.txt
apps/WindowsLargePagesTest/WindowsLargePagesTest/: CMakeLists.txt  WindowsLargePagesTest.cpp  WindowsLargePagesTest.h
apps/argtofile/: CMakeLists.txt
apps/argtofile/argtofile/: CMakeLists.txt  argtofile.c
apps/crypto/key-store/: GetKeyStoreAliases.java
apps/crypto/substitution-cipher/: BasicSubstitutionCipher.java
apps/deletefile/: CMakeLists.txt
apps/deletefile/deletefile/: CMakeLists.txt  deletefile.cpp  deletefile.h
apps/windows/api-exploration/AddVectoredExceptionHandler/: AddVectoredExceptionHandler.cpp  AddVectoredExceptionHandler.h  CMakeLists.txt
apps/windows/api-exploration/CreateJobObjectBasic/CreateJobObjectBasic/: CMakeLists.txt  CreateJobObjectBasic.cpp  CreateJobObjectBasic.h
apps/windows/api-exploration/GetSystemInfo/GetSystemInfo/: CMakeLists.txt  GetSystemInfo.cpp  GetSystemInfo.h
apps/windows/api-exploration/SetThreadGroupAffinity/SetThreadGroupAffinity/: CMakeLists.txt  SetThreadGroupAffinity.cpp  SetThreadGroupAffinity.h
compilers/vc/: volatileflag.cpp
configs/: git-aliases.txt
configs/symbols/: symchk-exclusion-list.txt
demos/c/: segfault-optimized.asm  segfault-optimized.txt  segfault.asm  segfault.c  segfault.txt
demos/css/: overflow-demo-1.html
samples/zipfiles/: ziphelp.txt
scripts/: avconvert-files.py  notes.md
scripts/bash/: write_sha256.sh
scripts/dotnet/: ReferencedAssemblies.ps1
scripts/dumpfiles/: enable-crash-dumps.bat
scripts/python/: backup-uncommitted-changes.py  export-git-stashes-to-patch.py  write_sha256.py
scripts/regex/: grep.txt  regexes.txt
scripts/windows/: shortname.cmd  windows-terminal-git-bash.json
tools/web/: empty-textarea.html
(+171 files in other folders)
