# CMakeList.txt : CMake project for CreateJobObjectBasic, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CreateJobObjectBasic "CreateJobObjectBasic.cpp" "CreateJobObjectBasic.h")

# TODO: Add tests and install targets if needed.
