# CMakeList.txt : CMake project for SetThreadGroupAffinity, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (SetThreadGroupAffinity "SetThreadGroupAffinity.cpp" "SetThreadGroupAffinity.h")

# TODO: Add tests and install targets if needed.
